recursion.cons.lessons.recursion.cons.Length.scala.error
length:-6: error: Missing closing brace `}' assumed here
try {
^length:1: error: expected class or object definition
def length(l:List[Int]): Int = {
^